

// courtesy header for the Dynamic Compact Control Language Library
// (libdccl)

#ifndef DCCLCOURTESY20091211H
#define DCCLCOURTESY20091211H

#include "goby/acomms/dccl/dccl.h"

/// \defgroup dccl_api API classes for the Dynamic Compact Control Language (includes writing custom encoders).

#endif
